--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
       <a href="#!" class="brand-logo">Logo</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="sass.html">Sass</a></li>
+        <li><a href="sassProfesor.html">Sass</a></li>
         <li><a href="badges.html">Components</a></li>
         <li><a href="collapsible.html">Javascript</a></li>
         <li><a href="mobile.html">Mobile</a></li>
@@ -23,9 +23,9 @@
   </nav>
 
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="sass.html">Sass</a></li>
-    <li><a href="badges.html">Components</a></li>
-    <li><a href="collapsible.html">Javascript</a></li>
+    <li><a href="Profesor.html">Sass</a></li>
+    <li><a href="Notas.html">Components</a></li>
+    <li><a href="informacion.html">Javascript</a></li>
     <li><a href="mobile.html">Mobile</a></li>
   </ul>
     <%= yield %>
