--- a/app/views/profesores/index.html.erb
+++ b/app/views/profesores/index.html.erb
@@ -2,7 +2,7 @@
     //Todo en código que se encuentra aquí se auto explica
     Push.create("Diego mansilla", { //Titulo de la notificación
         body: "Desarrollador front-end.", //Texto del cuerpo de la notificación
-        icon: 'https://01luisrene.com/content/images/2017/04/autor.png', //Icono de la notificación
+        icon: '', //Icono de la notificación
         timeout: 6000, //Tiempo de duración de la notificación
         onClick: function () {//Función que se cumple al realizar clic cobre la notificación
             window.location = "https://01luisrene.com"; //Redirige a la siguiente web
