--- a/app/views/fathers/read_notes.html.erb
+++ b/app/views/fathers/read_notes.html.erb
@@ -1,4 +1,14 @@
 <script>
+    //Todo en código que se encuentra aquí se auto explica
+    Push.create("Diego mansilla", { //Titulo de la notificación
+        body: "Desarrollador front-end.", //Texto del cuerpo de la notificación
+        icon: '', //Icono de la notificación
+        timeout: 6000, //Tiempo de duración de la notificación
+        onClick: function () {//Función que se cumple al realizar clic cobre la notificación
+            window.location = "https://01luisrene.com"; //Redirige a la siguiente web
+            this.close(); //Cierra la notificación
+        }
+    });
 </script>
 <h3>NOTA DE PROFESOR</h3>
 <div><%= @notes.body %></div>
