--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,10 @@
     </div>
   </nav>
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="fathers" data-turbolinks="false">Padres</a></li>
-    <li><a href="students" data-turbolinks="false">Estudiantes</a></li>
-    <li><a href="read_notes" data-turbolinks="false">Notas </a></li>
-    <li><a href="courses" data-turbolinks="false"> Cursos</a></li>
+    <li><a href="/fathers" data-turbolinks="false">Padres</a></li>
+    <li><a href="/students" data-turbolinks="false">Estudiantes</a></li>
+    <li><a href="/notes" data-turbolinks="false">Notas </a></li>
+    <li><a href="/courses" data-turbolinks="false"> Cursos</a></li>
   </ul>
   <body>
     <div class="container">
