--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,6 +29,7 @@
     <li><a href="/students" data-turbolinks="false">Estudiantes</a></li>
     <li><a href="/notes" data-turbolinks="false">Notas </a></li>
     <li><a href="/courses" data-turbolinks="false"> Cursos</a></li>
+    <li><a href="/users/login" data-turbolinks="false"> Login</a></li>
   </ul>
   <body>
     <div class="container">
