--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     </div>
   </nav>
   <ul class="sidenav " id="mobile-demo">
+    <li><a href="/teachers" data-turbolinks="false">profesor</a></li>
     <li><a href="/fathers" data-turbolinks="false">Padres</a></li>
     <li><a href="/students" data-turbolinks="false">Estudiantes</a></li>
     <li><a href="/notes" data-turbolinks="false">Notas </a></li>
