create view register multas and view multas

--- a/app/views/mulct/index.html.erb
+++ b/app/views/mulct/index.html.erb
@@ -1,2 +1,32 @@
-<h1>INDEX VER MULTAS</h1>
-<p>Find me in app/views/mulct/index.html.erb</p>
+<script>
+    $(document).ready(function () {
+        $('.collapsible').collapsible();
+    });
+
+</script>
+<ul class="collapsible">
+  <li>
+    <div class="collapsible-header"><i class="material-icons">whatshot</i>Multa 1</div>
+    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</span>
+    </div>
+  </li>
+  <li>
+    <div class="collapsible-header"><i class="material-icons">whatshot</i>Multa 2</div>
+    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+      labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+      exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</span>
+    </div>
+  </li>
+  <li>
+    <div class="collapsible-header"><i class="material-icons">whatshot</i>Multa 3</div>
+    <div class="collapsible-body"><span>Lorem ipsum dolor sit amet,
+          consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+          exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat..</span>
+    </div>
+  </li>
+</ul>
