--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">SI II</a>
+      <a href="#!" class="brand-logo">Sistema de infracciones</a>
       <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 <!--      <ul class="right hide-on-med-and-down">
         <li><a href="fathers">Padres</a></li>
@@ -26,11 +26,12 @@
     </div>
   </nav>
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="/teachers" data-turbolinks="false">profesor</a></li>
-    <li><a href="/fathers" data-turbolinks="false">Padres</a></li>
-    <li><a href="/students" data-turbolinks="false">Estudiantes</a></li>
-    <li><a href="/notes" data-turbolinks="false">Notas </a></li>
-    <li><a href="/courses" data-turbolinks="false"> Cursos</a></li>
+    <li><a href="/" data-turbolinks="false">Vehiculos</a></li>
+    <li><a href="/" data-turbolinks="false">Infractores</a></li>
+    <li><a href="/" data-turbolinks="false">Multas</a></li>
+    <li><a href="/" data-turbolinks="false">Policias</a></li>
+    <li><a href="/" data-turbolinks="false"> Cursos</a></li>
+    <li><a href="/users" data-turbolinks="false"> Registrar Usuarios </a></li>
     <li><a href="/users/login" data-turbolinks="false"> Login</a></li>
   </ul>
   <body>
