--- a/app/views/mulct/new.html.erb
+++ b/app/views/mulct/new.html.erb
@@ -1,2 +1,41 @@
-<h1>CREAR MULTA</h1>
+<div class="row">
+  <form class="col s12 card-panel">
+    <div class="row">
+      <div class="input-field col s6">
+        <i class="material-icons prefix">account_circle</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">nombre de infractor</label>
+      </div>
+      <div class="input-field col s6">
+        <i class="material-icons prefix">account_circle</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">apellido de infractor</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6">
+        <i class="material-icons prefix">mode_edit</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Marca de vehiculo </label>
+      </div>
+      <div class="input-field col s6">
+        <i class="material-icons prefix">mode_edit</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Placa</label>
+      </div>
+    </div>
+    <div class="row">
+      <div class="input-field col s6">
+        <i class="material-icons prefix">mode_edit</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Tipo de multa </label>
+      </div>
+      <div class="input-field col s6">
+        <i class="material-icons prefix">mode_edit</i>
+        <input id="icon_prefix" type="text" class="validate">
+        <label for="icon_prefix">Monto</label>
+      </div>
+    </div>
+  </form>
+</div>
 
