--- a/app/views/infraccions/_form.html.erb
+++ b/app/views/infraccions/_form.html.erb
@@ -1,3 +1,13 @@
+<script>
+    $('.datepicker').pickadate({
+        selectMonths: true, // Creates a dropdown to control month
+        selectYears: 15, // Creates a dropdown of 15 years to control year,
+        today: 'Today',
+        clear: 'Clear',
+        close: 'Ok',
+        closeOnSelect: false // Close upon selecting a date,
+    });
+</script>
 <%= form_with(model: infraccion, local: true) do |form| %>
   <% if infraccion.errors.any? %>
     <div id="error_explanation">
@@ -15,7 +25,9 @@
     <%= form.label :fecha %>
     <%= form.text_field :fecha, id: :infraccion_fecha %>
   </div>
-
+  <div class="field">
+    <input type="text" class="datepicker">
+  </div>
 
   <div class="field">
     <%= form.label :infractor_id %>
