--- a/app/views/infractors/_form.html.erb
+++ b/app/views/infractors/_form.html.erb
@@ -33,12 +33,12 @@
 
   <div class="field">
     <%= form.label :fecha_de_emision %>
-    <%= form.text_field :fecha_de_emision, id: :infractor_fecha_de_emision %>
+    <%= form.date_field :fecha_de_emision, id: :infractor_fecha_de_emision %>
   </div>
 
   <div class="field">
     <%= form.label :fecha_de_vencimiento %>
-    <%= form.text_field :fecha_de_vencimiento, id: :infractor_fecha_de_vencimiento %>
+    <%= form.date_field :fecha_de_vencimiento, id: :infractor_fecha_de_vencimiento %>
   </div>
 
   <div class="field">
