--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,10 @@
     </div>
   </nav>
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="/" data-turbolinks="false">Vehiculos</a></li>
-    <li><a href="/" data-turbolinks="false">Infractores</a></li>
-    <li><a href="/" data-turbolinks="false">Multas</a></li>
-    <li><a href="/" data-turbolinks="false">Policias</a></li>
-    <li><a href="/" data-turbolinks="false"> Cursos</a></li>
+    <li><a href="/vehiculos" data-turbolinks="false">Vehiculos</a></li>
+    <li><a href="/infractors" data-turbolinks="false">Infractores</a></li>
+    <li><a href="/infraccions" data-turbolinks="false">Multas</a></li>
+    <li><a href="/policia" data-turbolinks="false">Policias</a></li>
     <li><a href="/users" data-turbolinks="false"> Registrar Usuarios </a></li>
     <li><a href="/users/login" data-turbolinks="false"> Login</a></li>
   </ul>
