--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,12 +22,9 @@
     </nav>
   </div>
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="/tipo_infraccions" data-turbolinks="false">Tipos de infraciones</a></li>
-    <li><a href="/vehiculos" data-turbolinks="false">Vehiculos</a></li>
-    <li><a href="/infractors" data-turbolinks="false">Infractores</a></li>
-    <li><a href="/infraccions" data-turbolinks="false">Multas</a></li>
-    <li><a href="/policia" data-turbolinks="false">Policias</a></li>
-    <li><a href="/users" data-turbolinks="false"> Registrar Usuarios </a></li>
+    <li><a href="/estudiantes" data-turbolinks="false">Estudiante</a></li>
+    <li><a href="/cursos" data-turbolinks="false">Cursos</a></li>
+    <li><a href="/inscripcions" data-turbolinks="false">Inscriopciones</a></li>
     <li><a href="/users/login" data-turbolinks="false"> Login</a></li>
   </ul>
   <body>
