add link to profesores

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,6 +22,7 @@
     </nav>
   </div>
   <ul class="sidenav " id="mobile-demo">
+    <li><a href="/teachers" data-turbolinks="false">Profesores</a></li>
     <li><a href="/estudiantes" data-turbolinks="false">Estudiante</a></li>
     <li><a href="/cursos" data-turbolinks="false">Cursos</a></li>
     <li><a href="/inscripcions" data-turbolinks="false">Inscriopciones</a></li>
