--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
         <a href="#!" class="brand-logo">Sistemas II</a>
         <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/infrastructures" data-turbolinks="false">Infraestructura</a></li>
           <li><a style="color: #eeeeee;padding-top: 15px;" href="/teachers" data-turbolinks="false">Profesores</a></li>
           <li><a style="color: #eeeeee;padding-top: 15px;" href="/estudiantes" data-turbolinks="false">Estudiante</a></li>
           <li><a style="color: #eeeeee;padding-top: 15px;" href="/cursos" data-turbolinks="false">Cursos</a></li>
