add style to button

--- a/app/views/inscripcions/_form.html.erb
+++ b/app/views/inscripcions/_form.html.erb
@@ -40,7 +40,7 @@
     <%= form.number_field :monto, id: :inscripcion_monto %>
   </div>
 
-  <div class="actions">
+  <div  class="waves-effect grey lighten-2 btn" >
     <%= form.submit %>
   </div>
 <% end %>
