--- a/app/views/inscripcions/new.html.erb
+++ b/app/views/inscripcions/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', inscripcion: @inscripcion %>
 
-<%= link_to 'Back', inscripcions_path %>
+<%= link_to 'Back', inscripcions_path, :class=>"waves-effect grey lighten-2 btn"  %>
