add field grado to course

--- a/app/views/inscripcions/index.html.erb
+++ b/app/views/inscripcions/index.html.erb
@@ -30,4 +30,4 @@
 
 <br>
 
-<%= link_to 'New Inscripcion', new_inscripcion_path, :class=>"waves-effect grey lighten-2 btn"  %>
+<%= link_to 'New Inscripcion', new_inscripcion_path, :class=>"waves-effect grey lighten-2 btn col s12 m2 l2 "  %>
