update add grado to view and congtrols

--- a/app/views/cursos/index.html.erb
+++ b/app/views/cursos/index.html.erb
@@ -14,6 +14,7 @@
     <% @cursos.each do |curso| %>
       <tr>
         <td><%= curso.numero %></td>
+        <td><%= curso.grado %></td>
         <td><%= link_to 'Show', curso %></td>
         <td><%= link_to 'Edit', edit_curso_path(curso) %></td>
         <td><%= link_to 'Destroy', curso, method: :delete, data: { confirm: 'Are you sure?' } %></td>
