--- a/app/views/cursos/show.html.erb
+++ b/app/views/cursos/show.html.erb
@@ -3,6 +3,7 @@
 <p>
   <strong>Numero:</strong>
   <%= @curso.numero %>
+  <%= @curso.grado %>
 </p>
 
 <%= link_to 'Edit', edit_curso_path(@curso) %> |
