add nombre complete to inscripcin proces

--- a/app/views/inscripcions/_form.html.erb
+++ b/app/views/inscripcions/_form.html.erb
@@ -26,7 +26,7 @@
 
   <div class="field">
     <%= form.label :estudiante_id %>
-    <%= form.collection_select :estudiante_id, Estudiante.all, :id, :nombre %>
+    <%= form.collection_select :estudiante_id, Estudiante.all, :id, :nombre_more_apellidos %>
   </div>
 
 
