delte turbolinks gem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,13 +19,13 @@
         <a href="#!" class="brand-logo">Sistemas II</a>
         <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn" onclick="imprimir()">Reporte</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/infrastructures" data-turbolinks="false">Infraestructura</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/teachers" data-turbolinks="false">Profesores</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/estudiantes" data-turbolinks="false">Estudiante</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/cursos" data-turbolinks="false">Cursos</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/inscripcions" data-turbolinks="false">Inscriopciones</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/users/login" data-turbolinks="false"> Login</a></li>
+          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn">Reporte diego</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/infrastructures">Infraestructura</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/teachers" >Profesores</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/estudiantes" >Estudiante</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/cursos" >Cursos</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/inscripcions"> inscripciones</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/users/login"> login </a></li>
         </ul>
       </div>
     </nav>
