finis sistema de colegio

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">Sistemas II</a>
+        <a href="#!" class="brand-logo">Sistemas II eliminando menu del sistema para colegio</a>
         <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
           <li style="padding-top: 15px;"><a class="waves-effect waves-light btn">Reporte diego</a></li>
