create menu for vigilar empleoyes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,15 +16,15 @@
   <div class="navbar-fixed">
     <nav>
       <div class="nav-wrapper">
-        <a href="#!" class="brand-logo">iniciando sistema raestro de trabajador</a>
+        <a href="#!" class="brand-logo">Seguimiento</a>
         <a data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul class="right hide-on-med-and-down">
-          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn">Reporte diego</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/infrastructures">Infraestructura</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/teachers" >Profesores</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/estudiantes" >Estudiante</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/cursos" >Cursos</a></li>
-          <li><a style="color: #eeeeee;padding-top: 15px;" href="/inscripcions"> inscripciones</a></li>
+          <li style="padding-top: 15px;"><a class="waves-effect waves-light btn">Reporte</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/infrastructures">Jefe</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/teachers" >Empleado</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/estudiantes" >Area Trabajo</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/cursos" >Capturar Datos</a></li>
+          <li><a style="color: #eeeeee;padding-top: 15px;" href="/inscripcions">Confirmar datos</a></li>
           <li><a style="color: #eeeeee;padding-top: 15px;" href="/users/login"> login </a></li>
         </ul>
       </div>
