--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,11 +31,12 @@
     </nav>
   </div>
   <ul class="sidenav " id="mobile-demo">
-    <li><a  href="/teachers" data-turbolinks="false">Profesores</a></li>
-    <li><a href="/estudiantes" data-turbolinks="false">Estudiante</a></li>
-    <li><a href="/cursos" data-turbolinks="false">Cursos</a></li>
-    <li><a href="/inscripcions" data-turbolinks="false">Inscriopciones</a></li>
-    <li><a href="/users/login" data-turbolinks="false"> Login</a></li>
+    <li><a href="/infrastructures">Jefe</a></li>
+    <li><a href="/teachers" >Empleado</a></li>
+    <li><a href="/estudiantes" >Area Trabajo</a></li>
+    <li><a href="/cursos" >Capturar Datos</a></li>
+    <li><a href="/inscripcions">Confirmar datos</a></li>
+    <li><a href="/users/login"> login </a></li>
   </ul>
 
   <body>
