fixed link disable turbolinks

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,12 +36,12 @@
     </nav>
   </div>
   <ul class="sidenav " id="mobile-demo">
-    <li><a href="/infrastructures">Jefe</a></li>
-    <li><a href="/teachers" >Empleado</a></li>
-    <li><a href="/estudiantes" >Area Trabajo</a></li>
-    <li><a href="/cursos" >Capturar Datos</a></li>
-    <li><a href="/inscripcions">Confirmar datos</a></li>
-    <li><a href="/users/login"> login </a></li>
+    <li><a href="/infrastructures" data-turbolinks="false">Jefe</a></li>
+    <li><a href="/teachers"  data-turbolinks="false">Empleado</a></li>
+    <li><a href="/estudiantes"  data-turbolinks="false">Area Trabajo</a></li>
+    <li><a href="/cursos"  data-turbolinks="false">Capturar Datos</a></li>
+    <li><a href="/inscripcions" data-turbolinks="false">Confirmar datos</a></li>
+    <li><a href="/users/login" data-turbolinks="false"> login </a></li>
   </ul>
 
   <body>
