--- a/app/views/locations/index.html.erb
+++ b/app/views/locations/index.html.erb
@@ -33,3 +33,7 @@
 <br>
 
 <%= link_to 'New Location', new_location_path %>
+
+<div style='width: 800px;'>
+  <div id="map" style='width: 800px; height: 400px;'></div>
+</div>
