--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
           $('.sidenav').sidenav();
         });
     </script>
-    <script src="//maps.google.com/maps/api/js?key=[your API key]"></script>
+    <script src="//maps.google.com/maps/api/js?key=AIzaSyCB_4RrXA7nTP0jr_sZprvM7kkI2WRN3Fs"></script>
     <script src="//cdn.rawgit.com/mahnunchik/markerclustererplus/master/dist/markerclusterer.min.js"></script>
     <script src='//cdn.rawgit.com/printercu/google-maps-utility-library-v3-read-only/master/infobox/src/infobox_packed.js' type='text/javascript'></script> <!-- only if you need custom infoboxes -->
   </head>
