--- a/app/views/empleados/show.html.erb
+++ b/app/views/empleados/show.html.erb
@@ -15,5 +15,23 @@
   <%= @empleado.cargo %>
 </p>
 
+<h2>Add a rastreo:</h2>
+<%= form_for([@empleado, @empleado.rastreos.build]) do |f| %>
+  <p>
+    <%= f.label :latitud %><br>
+    <%= f.text_field :latitud %>
+  </p>
+  <p>
+    <%= f.label :longitud %><br>
+    <%= f.text_field :longitud %>
+  </p>
+  <p>
+    <%= f.label :image %><br>
+    <%= f.text_field :image %>
+  </p>
+  <p>
+    <%= f.submit %>
+  </p>
+<% end %>
 <%= link_to 'Edit', edit_empleado_path(@empleado) %> |
 <%= link_to 'Back', empleados_path %>
