--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,7 +40,7 @@
   </div>
   <ul class="sidenav " id="mobile-demo">
     <li><a href="/infrastructures" data-turbolinks="false">Jefe</a></li>
-    <li><a href="/teachers"  data-turbolinks="false">Empleado</a></li>
+    <li><a href="/empleados"  data-turbolinks="false">Empleado</a></li>
     <li><a href="/estudiantes"  data-turbolinks="false">Area Trabajo</a></li>
     <li><a href="/cursos"  data-turbolinks="false">Capturar Datos</a></li>
     <li><a href="/inscripcions" data-turbolinks="false">Confirmar datos</a></li>
